[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-flow"
version = "0.1.0"
description = "Local-first Codex work orchestration with ticketed commit units."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "everydy" }]
keywords = ["codex", "automation", "agent", "workflow", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
codex-flow = "codex_flow.cli:main"

[tool.setuptools]
packages = ["codex_flow"]

[tool.pytest.ini_options]
testpaths = ["tests"]

